--- a/docker/rootfs/etc/nginx/nginx.conf
+++ b/docker/rootfs/etc/nginx/nginx.conf
@@ -1,3 +1,4 @@
+user www-data www-data;
 worker_processes 1;
 pid /run/nginx.pid;
 
@@ -20,7 +21,7 @@ http {
     send_timeout 2;
     types_hash_max_size 2048;
     client_header_buffer_size 4k;
-    client_max_body_size ${client_max_body_size};
+    client_max_body_size 64M;
     client_body_buffer_size 128k;
     client_body_timeout 10;
     reset_timedout_connection on;
@@ -68,12 +69,13 @@ http {
         server_name _;
         sendfile off;
 
-        error_log  /var/container/var/log/nginx.error.log info;
-        access_log /var/container/var/log/nginx.access.log;
+        error_log   /var/container/var/log/nginx.error.log info;
+        access_log  /var/container/var/log/nginx.access.log;
 
         expires     $expires;
 
         root        /var/container/public;
+        index       index.php index.html;
 
         location / {
             try_files $uri /index.php?$query_string;
@@ -85,11 +87,19 @@ http {
             try_files /uploads$query /index.php;
         }
 
+        # Deny access to . files, for security
+        location ~ /\. {
+            log_not_found off;
+            deny all;
+        }
+
         # Pass the PHP scripts to PHP-FPM listening on 127.0.0.1:9000
         location ~ \.php$ {
             fastcgi_pass                127.0.0.1:9000;
             fastcgi_index               index.php;
-            fastcgi_split_path_info     ^(.+.php)(.*)$;
+            fastcgi_split_path_info     ^(.+\.php)(/.+)$;
+            fastcgi_param               PATH_INFO $fastcgi_path_info;
+            fastcgi_param               SCRIPT_NAME $fastcgi_script_name;
             fastcgi_param               SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include						fastcgi_params;
             fastcgi_read_timeout        300;
