--- a/composer.json
+++ b/composer.json
@@ -16,33 +16,35 @@
         "ext-yaml": "*",
         "ext-soap": "*",
         "ext-curl": "*",
-        "slim/slim": "^4.10.0",
-        "slim/psr7": "^1.5",
+        "ext-openssl": "*",
+        "slim/slim": "^4.11.0",
+        "slim/psr7": "^1.6",
         "slim/twig-view": "^3.3.0",
         "slim/http-cache": "^1.1.0",
         "php-di/php-di": "^6.4.0",
-        "doctrine/orm": "^2.12.2",
-        "doctrine/migrations": "^3.5.1",
+        "doctrine/orm": "^2.14.1",
+        "doctrine/migrations": "^3.6.0",
+        "firebase/php-jwt": "^6.4.0",
         "alksily/support": "^1.3.1",
-        "twig/twig": "^v3.4.3",
-        "twig/intl-extra": "^v3.4.0",
-        "twig/string-extra": "^v3.4.0",
-        "ramsey/uuid": "^4.3.1",
-        "ramsey/uuid-doctrine": "^1.8.1",
-        "phpmailer/phpmailer": "^v6.6.0",
+        "twig/twig": "^v3.5.1",
+        "twig/intl-extra": "^v3.5.1",
+        "twig/string-extra": "^v3.5.1",
+        "ramsey/uuid": "^4.7.3",
+        "ramsey/uuid-doctrine": "^1.8.2",
+        "phpmailer/phpmailer": "^v6.7.1",
         "sendpulse/rest-api": "^1.0.26",
         "pragmarx/google2fa": "^v4.0.2",
-        "phpoffice/phpspreadsheet": "^1.23.0",
-        "bacon/bacon-qr-code": "^2.0.7",
-        "monolog/monolog": "^2.6.0",
-        "illuminate/collections": "^v9.45.1",
-        "symfony/cache": "^v6.1.0",
-        "symfony/var-dumper": "^v6.1.0",
+        "phpoffice/phpspreadsheet": "^1.27.1",
+        "bacon/bacon-qr-code": "^2.0.8",
+        "monolog/monolog": "^2.9.1",
+        "illuminate/collections": "^v9.52.0",
+        "symfony/cache": "^v6.2.5",
+        "symfony/var-dumper": "^v6.2.5",
         "voku/html-compress-twig": "^4.0.2",
-        "rybakit/twig-deferred-extension": "^v3.0.1",
+        "rybakit/twig-deferred-extension": "^v3.0.4",
+        "socialconnect/http-client": "^1.0.0",
+        "socialconnect/auth": "^3.3.4",
         "bhaktaraz/php-rss-generator": "dev-master",
-        "socialconnect/http-client": "^1.0",
-        "socialconnect/auth": "^3.0.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.20.0",
