--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         image: getwebspace/platform
         environment:
             - DEBUG=1
-            - DATABASE=mysql://user:password@hostname/database
+          #  - DATABASE=mysql://user:password@hostname/database
           # - SIMPLE_PHONE_CHECK=1
         volumes:
             - ./bin:/var/container/bin:ro
