--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -7,6 +7,7 @@ services:
             dockerfile: docker/Dockerfile
         image: getwebspace/platform:test
         environment:
+            - TEST=1
             - DEBUG=0
         command: vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php
         volumes:
@@ -31,6 +32,7 @@ services:
             dockerfile: docker/Dockerfile
         image: getwebspace/platform:test
         environment:
+            - TEST=1
             - DEBUG=0
         command: vendor/bin/phpunit --color=always --configuration phpunit.xml
         volumes:
