--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         image: getwebspace/platform
         environment:
             - DEBUG=1
-          #  - DATABASE=mysql://user:password@hostname/database
+          # - DATABASE=mysql://user:password@hostname/database
           # - SIMPLE_PHONE_CHECK=1
         volumes:
             - ./bin:/var/container/bin:ro
@@ -23,7 +23,7 @@ services:
             - ./vendor:/var/container/vendor:rw
             - ./composer.json:/var/container/composer.json:rw
             - ./composer.lock:/var/container/composer.lock:rw
-            - ./phpunit.xml:/var/container/phpunit.xml:ro
+            - ./phpunit.xml:/var/container/phpunit.xml:rw
         restart: always
         ports:
             - 9000:80
