changes in build

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,6 +1,30 @@
 version: "3"
 
 services:
+    phpcs:
+        build:
+            context: .
+            dockerfile: docker/Dockerfile
+        image: getwebspace/platform:test
+        environment:
+            - TEST=1
+            - DEBUG=0
+        command: vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php
+        volumes:
+            - ./bin:/var/container/bin:rw
+            - ./config:/var/container/config:rw
+            - ./plugin:/var/container/plugin:rw
+            - ./public:/var/container/public:rw
+            - ./src:/var/container/src:rw
+            - ./tests:/var/container/tests:rw
+            - ./theme:/var/container/theme:rw
+            - ./var:/var/container/var:rw
+            - ./var/upload:/var/container/public/uploads:rw
+            - ./.php-cs-fixer.dist.php:/var/container/.php-cs-fixer.dist.php:ro
+            - ./composer.json:/var/container/composer.json:rw
+            - ./composer.lock:/var/container/composer.lock:rw
+            - ./phpunit.xml:/var/container/phpunit.xml:rw
+
     phpunit:
         build:
             context: .
@@ -19,7 +43,6 @@ services:
             - ./tests:/var/container/tests:rw
             - ./theme:/var/container/theme:rw
             - ./var:/var/container/var:rw
-            - ./var/cache:/var/container/public/cache:rw
             - ./var/upload:/var/container/public/uploads:rw
             - ./.php-cs-fixer.dist.php:/var/container/.php-cs-fixer.dist.php:ro
             - ./composer.json:/var/container/composer.json:rw
