--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -5,7 +5,7 @@ services:
         build:
             context: .
             dockerfile: docker/Dockerfile
-        image: getwebspace/platform:test
+        image: ghcr.io/getwebspace/platform:test
         environment:
             - TEST=1
             - DEBUG=0
@@ -29,7 +29,7 @@ services:
         build:
             context: .
             dockerfile: docker/Dockerfile
-        image: getwebspace/platform:test
+        image: ghcr.io/getwebspace/platform:test
         environment:
             - TEST=1
             - DEBUG=0
