--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
         build:
             context: .
             dockerfile: docker/Dockerfile
-        image: ghcr.io/getwebspace/platform:master
+        image: ghcr.io/getwebspace/platform:3.0.0
         environment:
             - DEBUG=1
           # - DATABASE=mysql://user:password@hostname/database
