--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,6 +2,8 @@ name: Docker builder
 
 on:
     push:
+        branches:
+            - master
         tags:
             - '*'
 
@@ -39,9 +41,6 @@ jobs:
             -   name: Check out the repo
                 uses: actions/checkout@v3
 
-            -   name: Set up Docker Buildx
-                uses: docker/setup-buildx-action@v2
-
             -   name: Log in to the Container registry
                 uses: docker/login-action@v2
                 with:
@@ -49,21 +48,16 @@ jobs:
                     username: ${{ github.actor }}
                     password: ${{ secrets.GITHUB_TOKEN }}
 
-            -   name: Extract metadata (tags, labels) for Docker
-                id: meta
-                uses: docker/metadata-action@v4
-                with:
-                    images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-
             -   name: Build and push Docker image
                 uses: docker/build-push-action@v3
                 with:
                     context: .
                     push: true
                     file: docker/Dockerfile
-                    tags: ${{ steps.meta.outputs.tags }}
-                    labels: ${{ steps.meta.outputs.labels }}
+                    tags: |
+                        ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref }}
+                        ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
                     build-args: |
                         NO_DEV=--no-dev
-                        VERSION=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
-                        COMMIT=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.revision'] }}
+                        VERSION=${{ github.ref }}
+                        COMMIT=${{ github.sha }}
