--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -39,6 +39,13 @@ jobs:
             -   name: Check out the repo
                 uses: actions/checkout@v3
 
+            -   name: Get the version
+                id: get_version
+                run: |
+                    echo ::set-output name=NAME::${GITHUB_REF#refs/*/}
+                    echo ::set-output name=BRANCH::${GITHUB_REF#refs/heads/}
+                    echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+
             -   name: Log in to the Container registry
                 uses: docker/login-action@v2
                 with:
@@ -53,7 +60,7 @@ jobs:
                     push: true
                     file: docker/Dockerfile
                     tags: |
-                        ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref.replace('refs/tags/', '') }}
+                        ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.get_version.outputs.VERSION }}
                         ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
                     build-args: |
                         NO_DEV=--no-dev
