--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -40,10 +40,11 @@ jobs:
                 uses: actions/checkout@v3
 
             -   name: Set tag name environment variable
+                id: setup_env
                 run: | 
-                    echo "NAME=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-                    echo "BRANCH=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
-                    echo "VERSION=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
+                    echo "NAME=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
+                    echo "BRANCH=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT
+                    echo "VERSION=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_OUTPUT
 
             -   name: Log in to the Container registry
                 uses: docker/login-action@v2
@@ -59,7 +60,7 @@ jobs:
                     push: true
                     file: docker/Dockerfile
                     tags: |
-                        ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:$VERSION
+                        ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.setup_env.outputs.VERSION }}
                         ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
                     build-args: |
                         NO_DEV=--no-dev
