--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -8,6 +8,8 @@ on:
 env:
     REGISTRY: ghcr.io
     IMAGE_NAME: ${{ github.repository }}
+    BRANCH: ${GITHUB_REF#refs/heads/}
+    VERSION: ${GITHUB_REF/refs\/tags\//}
 
 jobs:
     # Run tests.
@@ -39,13 +41,6 @@ jobs:
             -   name: Check out the repo
                 uses: actions/checkout@v3
 
-            -   name: Set tag name environment variable
-                id: setup_env
-                run: | 
-                    echo "NAME=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
-                    echo "BRANCH=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT
-                    echo "VERSION=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_OUTPUT
-
             -   name: Log in to the Container registry
                 uses: docker/login-action@v2
                 with:
@@ -60,7 +55,7 @@ jobs:
                     push: true
                     file: docker/Dockerfile
                     tags: |
-                        ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.setup_env.outputs.VERSION }}
+                        ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:$VERSION
                         ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
                     build-args: |
                         NO_DEV=--no-dev
