--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -8,38 +8,43 @@ on:
 env:
     REGISTRY: ghcr.io
     IMAGE_NAME: ${{ github.repository }}
-    BRANCH: ${{ github.ref#refs/heads/ }}
-    VERSION: ${{ github.ref/refs\/tags\// }}
 
 jobs:
     # Run tests.
     # See also https://docs.docker.com/docker-hub/builds/automated-testing/
-#    test:
-#        runs-on: ubuntu-latest
-#        name: Testing
-#        steps:
-#            -   uses: actions/checkout@v3
-#
-#            -   name: Set up Docker Buildx
-#                uses: docker/setup-buildx-action@v2
-#
-#            -   name: Build test version
-#                run: docker-compose --file docker-compose.test.yml build --build-arg=NO_DEV=""
-#
-#            -   name: Run test PHP_CS
-#                run: docker-compose --file docker-compose.test.yml run phpcs
-#
-#            -   name: Run test PHPUnit
-#                run: docker-compose --file docker-compose.test.yml run phpunit
+    #    test:
+    #        runs-on: ubuntu-latest
+    #        name: Testing
+    #        steps:
+    #            -   uses: actions/checkout@v3
+    #
+    #            -   name: Set up Docker Buildx
+    #                uses: docker/setup-buildx-action@v2
+    #
+    #            -   name: Build test version
+    #                run: docker-compose --file docker-compose.test.yml build --build-arg=NO_DEV=""
+    #
+    #            -   name: Run test PHP_CS
+    #                run: docker-compose --file docker-compose.test.yml run phpcs
+    #
+    #            -   name: Run test PHPUnit
+    #                run: docker-compose --file docker-compose.test.yml run phpunit
 
     # build alpine
     debian:
-#        needs: test
+        #        needs: test
         runs-on: ubuntu-latest
         name: Build base container
         steps:
             -   name: Check out the repo
                 uses: actions/checkout@v3
+
+            -   name: Set tag name environment variable
+                id: setup_env
+                run: |
+                    echo "NAME=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
+                    echo "BRANCH=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT
+                    echo "VERSION=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_OUTPUT
 
             -   name: Log in to the Container registry
                 uses: docker/login-action@v2
@@ -55,7 +60,7 @@ jobs:
                     push: true
                     file: docker/Dockerfile
                     tags: |
-                        ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
+                        ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.setup_env.outputs.VERSION }}
                         ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
                     build-args: |
                         NO_DEV=--no-dev
