--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
         "fakerphp/faker": "^v1.21.0",
         "friendsofphp/php-cs-fixer": "^v3.14.4",
         "phpunit/phpunit": "^9.6.3",
-        "guzzlehttp/guzzle": "^7.5.0"
+        "guzzlehttp/guzzle": "^7.5.0",
+        "rector/rector": "^0.17.1"
     },
     "autoload": {
         "psr-4": {
