--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -75,7 +75,8 @@ RUN set -x \
     && chmod -R 0755 ${PLATFORM_HOME} \
     && chmod -R 0777 ${PLATFORM_HOME}/plugin \
     && chmod -R 0776 ${PLATFORM_HOME}/public/uploads \
-    && chmod -R 0776 ${PLATFORM_HOME}/theme \
+    && chmod -R 0777 ${PLATFORM_HOME}/public/resource \
+    && chmod -R 0777 ${PLATFORM_HOME}/theme \
     && chmod -R 0777 ${PLATFORM_HOME}/var
 
 # Switch to use a non-root user from here on
