--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
         "bhaktaraz/php-rss-generator": "dev-master"
     },
     "require-dev": {
-        "fakerphp/faker": "^v1.23.0",
+        "fakerphp/faker": "^2.0.x-dev",
         "friendsofphp/php-cs-fixer": "^v3.17.0",
         "phpunit/phpunit": "^9.6.9",
         "guzzlehttp/guzzle": "^7.7.0"
