--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,8 @@
         "slim/http-cache": "^1.1.0",
         "php-di/php-di": "^6.4.0",
         "doctrine/orm": "^2.14.2",
+        "doctrine/migrations": "^3.6",
+        "illuminate/collections": "^v9.52.6",
         "firebase/php-jwt": "^6.4.0",
         "alksily/support": "^2.0.0",
         "twig/twig": "^v3.5.1",
@@ -36,7 +38,6 @@
         "phpoffice/phpspreadsheet": "^1.28.0",
         "bacon/bacon-qr-code": "^2.0.8",
         "monolog/monolog": "^2.9.1",
-        "illuminate/collections": "^v9.52.6",
         "symfony/cache": "^v6.2.8",
         "symfony/var-dumper": "^v6.2.8",
         "voku/html-compress-twig": "^4.0.2",
