--- a/composer.json
+++ b/composer.json
@@ -16,34 +16,30 @@
         "ext-json": "*",
         "ext-curl": "*",
         "ext-openssl": "*",
-        "slim/slim": "^4.12.0",
+        "slim/slim": "^4.13.0",
         "slim/psr7": "^1.6.1",
         "slim/twig-view": "^3.3.0",
         "slim/http-cache": "^1.1.0",
-        "php-di/php-di": "^6.4.0",
-        "doctrine/orm": "^2.14.2",
-        "doctrine/migrations": "^3.6",
-        "illuminate/events": "^v10.46.0",
-        "illuminate/database": "^v10.46.0",
-        "illuminate/collections": "^v10.46.0",
-        "firebase/php-jwt": "^6.4.0",
+        "php-di/php-di": "^7.0.6",
+        "illuminate/events": "^v10.48.3",
+        "illuminate/database": "^v10.48.3",
+        "illuminate/collections": "^v10.48.3",
+        "firebase/php-jwt": "^v6.10.0",
         "alksily/support": "^2.0.0",
-        "twig/twig": "^v3.5.1",
-        "twig/intl-extra": "^v3.5.1",
-        "twig/string-extra": "^v3.5.1",
-        "ramsey/uuid": "^4.7.4",
-        "ramsey/uuid-doctrine": "^1.8.2",
-        "phpmailer/phpmailer": "^v6.8.0",
-        "sendpulse/rest-api": "^1.0.27",
-        "pragmarx/google2fa": "^v4.0.2",
-        "phpoffice/phpspreadsheet": "^1.28.0",
+        "twig/twig": "^v3.8.0",
+        "twig/intl-extra": "^v3.8.0",
+        "twig/string-extra": "^v3.8.0",
+        "ramsey/uuid": "^4.7.2",
+        "phpmailer/phpmailer": "^v6.9.1",
+        "sendpulse/rest-api": "^2.0.0",
+        "phpoffice/phpspreadsheet": "^1.29.0",
         "bacon/bacon-qr-code": "^2.0.8",
-        "monolog/monolog": "^2.9.1",
-        "symfony/cache": "^v6.2.8",
-        "symfony/var-dumper": "^v6.2.8",
+        "monolog/monolog": "^3.5.0",
+        "symfony/cache": "^v7.0.0",
+        "symfony/var-dumper": "^v7.0.0",
         "voku/html-compress-twig": "^4.0.2",
         "rybakit/twig-deferred-extension": "^v3.0.4",
-        "bhaktaraz/php-rss-generator": "dev-master"
+        "robmorgan/phinx": "^0.16.0"
     },
     "require-dev": {
         "fakerphp/faker": "^2.0.x-dev",
