--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
             - ./config:/var/container/config:ro
             - ./plugin:/var/container/plugin:rw
             - ./public:/var/container/public:rw
+            - ./scheme:/var/container/scheme:rw
             - ./src:/var/container/src:ro
             - ./tests:/var/container/tests:ro
             - ./theme:/var/container/theme:rw
@@ -24,6 +25,6 @@ services:
             - ./composer.json:/var/container/composer.json:rw
             - ./composer.lock:/var/container/composer.lock:rw
             - ./phpunit.xml:/var/container/phpunit.xml:rw
-            - ./migrations.json:/var/container/migrations.json:rw
+            - ./phinx.php:/var/container/phinx.php:rw
         ports:
             - 9000:80
