fix dockerfile & nginx.conf

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -14,8 +14,8 @@ ARG NO_DEV=""
 # Set env vars
 ENV COMMIT_BRANCH=${VERSION} \
     COMMIT_SHA=${COMMIT} \
-    BUILD_DEPENDENSIES="g++ make autoconf" \
-    DEPENDENSIES="" \
+    BUILD_DEPENDENCIES="g++ make autoconf" \
+    DEPENDENCIES="" \
     EXTRA_EXTENSIONS="pdo_mysql" \
     PLATFORM_HOME="/var/container"
 
@@ -28,10 +28,10 @@ COPY --chown=www-data:www-data --chmod=755 . ${PLATFORM_HOME}
 # Set homedir as work
 WORKDIR ${PLATFORM_HOME}
 
-# Install packages
+# Install packages and dependencies
 RUN set -x \
-    && apk add --no-cache --virtual .build-deps ${PHPIZE_DEPS} ${BUILD_DEPENDENSIES} \
-    && apk add --no-cache \
+    && apk update \
+    && apk add --no-cache --virtual .build-deps ${PHPIZE_DEPS} ${BUILD_DEPENDENCIES} \
         runit \
         nginx \
         curl \
@@ -44,20 +44,22 @@ RUN set -x \
         libxml2-dev \
         icu-dev \
         yaml-dev \
-        ${DEPENDENSIES} \
+        php-dev \
+        ${DEPENDENCIES} \
     && nginx -V \
     && pecl install -f imagick yaml \
     && docker-php-ext-install -j$(nproc) zip gd intl soap ${EXTRA_EXTENSIONS} \
     && docker-php-ext-enable opcache.so imagick yaml \
     && docker-php-source delete \
     \
-    # Remove alpine cache
+    # Remove alpine cache and unused dependencies
     && rm -rf /var/cache/apk/* \
+    && apk del .build-deps \
     \
     # Remove default server definition
     && rm /etc/nginx/http.d/default.conf \
     \
-    # Make sure files/folders needed by the processes are accessable when they run under the www-data user
+    # Make sure files/folders needed by the processes are accessible when they run under the www-data user
     && chown -R www-data:www-data /run \
     && chown -R www-data:www-data /var/lib/nginx \
     && chown -R www-data:www-data /var/log/nginx \
@@ -72,7 +74,8 @@ RUN set -x \
     # Install platform
     && composer install ${NO_DEV} --no-suggest --no-progress \
     && chown -R www-data:www-data ${PLATFORM_HOME} \
-    && chmod -R 0755 ${PLATFORM_HOME} \
+    && find ${PLATFORM_HOME} -type f -exec chmod 0644 {} + \
+    && find ${PLATFORM_HOME} -type d -exec chmod 0755 {} + \
     && chmod -R 0777 ${PLATFORM_HOME}/plugin \
     && chmod -R 0776 ${PLATFORM_HOME}/public/uploads \
     && chmod -R 0777 ${PLATFORM_HOME}/public/resource \
