--- a/docker/rootfs/etc/nginx/nginx.conf
+++ b/docker/rootfs/etc/nginx/nginx.conf
@@ -68,8 +68,8 @@ http {
         server_name _;
         sendfile off;
 
-        error_log   /var/container/var/log/nginx.error.log info;
-        access_log  /var/container/var/log/nginx.access.log;
+    #   error_log   /var/container/var/log/nginx.error.log info;
+    #   access_log  /var/container/var/log/nginx.access.log;
 
         expires     $expires;
 
@@ -86,13 +86,13 @@ http {
             try_files /uploads$query /index.php;
         }
 
-        # Deny access to . files, for security
+        # deny access to . files, for security
         location ~ /\. {
             log_not_found off;
             deny all;
         }
 
-        # Pass the PHP scripts to PHP-FPM listening on 127.0.0.1:9000
+        # pass the PHP scripts to PHP-FPM listening on 127.0.0.1:9000
         location ~ \.php$ {
             fastcgi_pass                127.0.0.1:9000;
             fastcgi_index               index.php;
