downgrade twig to 3.8.0

--- a/composer.json
+++ b/composer.json
@@ -16,37 +16,37 @@
         "ext-json": "*",
         "ext-curl": "*",
         "ext-openssl": "*",
-        "slim/slim": "^4.13.0",
-        "slim/psr7": "^1.6.1",
-        "slim/twig-view": "^3.3.0",
+        "slim/slim": "^4.14.0",
+        "slim/psr7": "^1.7.0",
+        "slim/twig-view": "^3.4.0",
         "slim/http-cache": "^1.1.0",
         "php-di/php-di": "^7.0.6",
-        "illuminate/events": "^v10.48.3",
-        "illuminate/database": "^v10.48.3",
-        "illuminate/collections": "^v10.48.3",
-        "firebase/php-jwt": "^v6.10.0",
+        "illuminate/events": "^v11.11.1",
+        "illuminate/database": "^v11.11.1",
+        "illuminate/collections": "^v11.11.1",
+        "firebase/php-jwt": "^v6.10.1",
         "alksily/support": "^2.0.0",
-        "twig/twig": "^v3.8.0",
-        "twig/intl-extra": "^v3.8.0",
-        "twig/string-extra": "^v3.8.0",
-        "ramsey/uuid": "^4.7.2",
+        "twig/twig": "v3.8.0",
+        "twig/intl-extra": "v3.8.0",
+        "twig/string-extra": "v3.8.0",
+        "ramsey/uuid": "^4.7.6",
         "phpmailer/phpmailer": "^v6.9.1",
-        "sendpulse/rest-api": "^2.0.0",
+        "sendpulse/rest-api": "^2.0.1",
         "phpoffice/phpspreadsheet": "^1.29.0",
-        "bacon/bacon-qr-code": "^2.0.8",
-        "monolog/monolog": "^3.5.0",
-        "symfony/cache": "^v7.0.0",
-        "symfony/var-dumper": "^v7.0.0",
+        "bacon/bacon-qr-code": "^v3.0.0",
+        "monolog/monolog": "^3.6.0",
+        "symfony/cache": "^v7.1.1",
+        "symfony/var-dumper": "^v7.1.1",
         "voku/html-compress-twig": "^4.0.2",
-        "rybakit/twig-deferred-extension": "^v3.0.4",
-        "robmorgan/phinx": "^0.16.0",
-        "teamtnt/tntsearch": "^4.2"
+        "rybakit/twig-deferred-extension": "^v3.0.5",
+        "robmorgan/phinx": "^0.16.1",
+        "teamtnt/tntsearch": "^v4.2.1"
     },
     "require-dev": {
         "fakerphp/faker": "^2.0.x-dev",
-        "friendsofphp/php-cs-fixer": "^v3.17.0",
-        "phpunit/phpunit": "^9.6.9",
-        "guzzlehttp/guzzle": "^7.7.0"
+        "friendsofphp/php-cs-fixer": "^v3.59.3",
+        "phpunit/phpunit": "^11.2.5",
+        "guzzlehttp/guzzle": "^7.8.1"
     },
     "autoload": {
         "psr-4": {
