replace cache lib from symfony to laravel

--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,11 @@
         "slim/twig-view": "^3.4.0",
         "slim/http-cache": "^1.1.0",
         "php-di/php-di": "^7.0.6",
-        "illuminate/events": "^v11.11.1",
-        "illuminate/database": "^v11.11.1",
-        "illuminate/collections": "^v11.11.1",
+        "illuminate/events": "^v11.15.0",
+        "illuminate/database": "^v11.15.0",
+        "illuminate/collections": "^v11.15.0",
+        "illuminate/filesystem": "^11.15.0",
+        "illuminate/cache": "^11.15",
         "firebase/php-jwt": "^v6.10.1",
         "alksily/support": "^2.0.0",
         "twig/twig": "v3.8.0",
@@ -35,7 +37,6 @@
         "phpoffice/phpspreadsheet": "^1.29.0",
         "bacon/bacon-qr-code": "^v3.0.0",
         "monolog/monolog": "^3.6.0",
-        "symfony/cache": "^v7.1.1",
         "symfony/var-dumper": "^v7.1.1",
         "voku/html-compress-twig": "^4.0.2",
         "rybakit/twig-deferred-extension": "^v3.0.5",
