--- a/docker/rootfs/usr/local/etc/php/conf.d/custom.ini
+++ b/docker/rootfs/usr/local/etc/php/conf.d/custom.ini
@@ -5,3 +5,9 @@ upload_max_filesize= 32M
 
 [Date]
 date.timezone="UTC"
+
+[opcache]
+opcache.enable=1
+opcache.enable_cli=1
+opcache.jit_buffer_size=100M
+opcache.jit=1255
